[package]
edition = "2021"
name = "geckodriver"
version = "0.35.0"
authors = ["Mozilla"]
include = [
    "/.cargo",
    "/build.rs",
    "/src"
  ]
description = "Proxy for using WebDriver clients to interact with Gecko-based browsers."
readme = "README.md"
keywords = [
    "firefox",
    "httpd",
    "mozilla",
    "w3c",
    "webdriver",
  ]
license = "MPL-2.0"
repository = "https://hg.mozilla.org/mozilla-central/file/tip/testing/geckodriver"

[dependencies]
anyhow = "1"
base64 = "0.21"
chrono = "0.4.6"
clap = { version = "4", default-features = false, features = ["cargo", "std", "suggestions", "wrap_help", "string"] }
# Depend on flate2 to enable the rust backend (the default) for flate2 used by the zip crate.
flate2 = "1"
hyper = "0.14"
icu_segmenter = { version = "1.5", default-features = false, features = ["auto", "compiled_data"] }
lazy_static = "1.0"
log = { version = "0.4", features = ["std"] }
marionette = "0.6.0"
mozdevice = "0.5.3"
mozprofile = "0.9.3"
mozrunner = "0.15.3"
mozversion = "0.5.3"
regex = { version="1.0", default-features = false, features = ["perf", "std"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
tempfile = "3"
thiserror = "1"
url = "2.4"
uuid = { version = "1.0", features = ["v4"] }
webdriver = "0.51.0"
zip = { version = "2.1.2", default-features = false, features = ["deflate-flate2", "flate2"] }
mozilla-central-workspace-hack = { version = "0.1", features = ["geckodriver"], optional = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "geckodriver"
