[package]
name = "marionette"
version = "0.5.0"
authors = ["Mozilla"]
description = "Library implementing the client side of Gecko's Marionette remote automation protocol."
edition = "2018"
keywords = ["mozilla", "firefox", "marionette", "webdriver"]
license = "MPL-2.0"
repository = "https://hg.mozilla.org/mozilla-central/file/tip/testing/geckodriver/marionette"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
